Changed test.html file

--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a new Test file that I have written - 18th June Evening</h1>
+    <h1>This is a new Test file that I have written - 9th July Afternoon</h1>
 </body>
 </html>
